<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:id="@+id/rootLayout" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/drive_your_way"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/looking_for_the_rider_app"
        android:layout_marginTop="20dp"
        android:id="@+id/text_rider_app"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/bottomText"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_rider_app"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_sign_in_background"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignIn"
            android:layout_marginRight="6dp"
            android:text="@string/sign_in" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/btnRegister"
            android:background="@drawable/btn_register_background"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:layout_marginLeft="6dp"
            android:text="@string/register" />

    </LinearLayout>

</RelativeLayout>